--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
         <br>
         Password: 
-        <input type="text" id="password" placeholder="Password">
+        <input type="password" id="password" placeholder="Password">
         <br>
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
         <input type="checkbox" name="keepLogin" id="keepLogin"> Keep me logged in
