essage for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
         <img src="Yatzy.png" alt="Yatzy logo">
         <br>
         <form method="POST"></form>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Login: 
-        <input type="text" id="userName" placeholder="Username"> 
-        
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+        Login:
+        <input type="text" id="userName" placeholder="Username">
         <br>
-        Password: 
+        Password:
         <input type="password" id="password" placeholder="Password">
         <br>
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <input type="checkbox" name="keepLogin" id="keepLogin"> Keep me logged in
         <br>
         <br>
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <a href="profile.html"><input type="button" value="Login"></a>
-        
+
         <br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://help.myspace.com/hc/en-us/articles/201956084-Forgot-Password">Forgot password</a>
