--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
 
 <body>
     <center>
-        <h1></h1>
         <br>
         <img src="Yatzy.png" alt="Yatzy logo">
         <br>
-        <form method="POST"></form>
+        <form method="POST">
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
         Login:
         <input type="text" id="userName" placeholder="Username">
         <br>
@@ -27,7 +25,7 @@
         <br>
         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <a href="profile.html"><input type="button" value="Login"></a>
-
+    </form>
         <br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://help.myspace.com/hc/en-us/articles/201956084-Forgot-Password">Forgot password</a>
