Formatted some code in index.html

--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
         <br>
         <img src="Yatzy.png" alt="Yatzy logo">
         <br>
-        <form method="POST"></form>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <form method="POST">
+            <!-- Kommentar --> 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Login:
+            <input type="text" id="userName" placeholder="Username">
 
-        Login:
-        <input type="text" id="userName" placeholder="Username">
-        <br>
-        Password:
-        <input type="password" id="password" placeholder="Password">
-        <br>
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <input type="checkbox" name="keepLogin" id="keepLogin"> Keep me logged in
-        <br>
-        <br>
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-        <a href="profile.html"><input type="button" value="Login"></a>
+            <br>
+            Password:
+            <input type="password" id="password" placeholder="Password">
+            <br>
+            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+            <input type="checkbox" name="keepLogin" id="keepLogin"> Keep me logged in
+            <br>
+            <br>
+            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+            <a href="profile.html"><input type="button" value="Login"></a>
+        </form>
 
         <br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
