--- a/results.html
+++ b/results.html
@@ -14,44 +14,52 @@
         <a href="yatzy.html">New Game</a>
     </p>
 
-    <table style="width: 100%" border="1">
+    <h2>Omgång 1</h2>
+    <table style="width: 200px" border="1">
         <tr>
-            <th>Vinnare</th>
+            <th>Namn</th>
             <th>Poäng</th>
-            <th>Omgång</th>
+        </tr>
+        <tr>
+            <td>Anna</td>
+            <td>300</td>
+        </tr>
+        <tr>
+            <td>Pelle</td>
+            <td>271</td>
+        </tr>
+        <tr>
+            <td>Karin</td>
+            <td>201</td>
+        </tr>
+        <tr>
+            <td>Kalle</td>
+            <td>301</td>
+        </tr>
+    </table>
 
+    <h2>Omgång 2</h2>
+    <table style="width: 200px" border="1">
+        <tr>
+            <th>Namn</th>
+            <th>Poäng</th>
         </tr>
         <tr>
-            <th>Anna</th>
-            <th>300</th>
-            <th>1</th>
+            <td>Klara</td>
+            <td>321</td>
         </tr>
         <tr>
-            <th>Pelle</th>
-            <th>271</th>
-            <th>2</th>
+            <td>Anders</td>
+            <td>200</td>
         </tr>
         <tr>
-            <th>Karin</th>
-            <th>201</th>
-            <th>3</th>
+            <td>Anna</td>
+            <td>342</td>
         </tr>
         <tr>
-            <th>Kalle</th>
-            <th>301</th>
-            <th>4</th>
+            <td>Kalle</td>
+            <td>301</td>
         </tr>
-        <tr>
-            <th>Viktor</th>
-            <th>121</th>
-            <th>5</th>
-        </tr>
-        <tr>
-            <th>Alva</th>
-            <th>1480</th>
-            <th>6</th>
-        </tr>
-
     </table>
 
 
