ändrat lite grejer

--- a/profile.html
+++ b/profile.html
@@ -7,18 +7,19 @@
 </head>
 
 <body>
-    
-    <a href="index.html">Log Out</a>
-    <a href="results.html">Scores</a>
-    <a href="yatzy.html">New Game</a>
+    <p>Gå till:
+        <a href="index.html">Log Out</a>
+        <a href="results.html">Scores</a>
+        <a href="yatzy.html">New Game</a>
+    </p>
     <h1>Charmander</h1>
-    <img src="https://static.planetminecraft.com/files/avatar/1679428_4.gif"
-        alt="Cutebun">
+    <img src="https://static.planetminecraft.com/files/avatar/1679428_4.gif" alt="Cutebun">
     <p> </p>
     <h2>Gamer info:</h2>
     <p>animals rock!
     </p>
     <h3>Games played:</h3>
+    <p>2</p>
 
 </body>
 
