--- a/results.html
+++ b/results.html
@@ -1,4 +1,4 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="sv">
 
 <head>
@@ -7,12 +7,11 @@
 </head>
 
 <body>
-    <h1>Resultat från tidigare omgångar</h1>
-
     <p>Gå till:
         <a href="profile.html">Profile</a>
         <a href="yatzy.html">New Game</a>
     </p>
+    <h1>Resultat från tidigare omgångar</h1>
 
     <h2>Omgång 1</h2>
     <table style="width: 200px" border="1">
