--- a/yatzy.html
+++ b/yatzy.html
@@ -15,52 +15,52 @@
     <table>
         <tr>
             <th></th>
-            <th>P1</th>
-            <th>P2</th>
-            <th>P3</th>
-            <th>P4</th>
+            <th>TT</th>
+            <th>BP</th>
+            <th>VR</th>
+            <th>GY</th>
         </tr>
         <tr>
             <td>Ettor</td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
+            <td><input type="number" min="0" max="5"></td>
+            <td><input type="number" min="0" max="5"></td>
+            <td><input type="number" min="0" max="5"></td>
+            <td><input type="number" min="0" max="5"></td>
         </tr>
         <tr>
             <td>Tvåor</td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
+            <td><input type="number" min="0" max="10" step="2"></td>
+            <td><input type="number" min="0" max="10" step="2"></td>
+            <td><input type="number" min="0" max="10" step="2"></td>
+            <td><input type="number" min="0" max="10" step="2"></td>
         </tr>
         <tr>
             <td>Treor</td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
+            <td><input type="number" min="0" max="15" step="3"></td>
+            <td><input type="number" min="0" max="15" step="3"></td>
+            <td><input type="number" min="0" max="15" step="3"></td>
+            <td><input type="number" min="0" max="15" step="3"></td>
         </tr>
         <tr>
             <td>Fyror</td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
+            <td><input type="number" min="0" max="20" step="4"></td>
+            <td><input type="number" min="0" max="20" step="4"></td>
+            <td><input type="number" min="0" max="20" step="4"></td>
+            <td><input type="number" min="0" max="20" step="4"></td>
         </tr>
         <tr>
             <td>Femmor</td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
+            <td><input type="number" min="0" max="25" step="5"></td>
+            <td><input type="number" min="0" max="25" step="5"></td>
+            <td><input type="number" min="0" max="25" step="5"></td>
+            <td><input type="number" min="0" max="25" step="5"></td>
         </tr>
         <tr>
             <td>Sexor</td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
+            <td><input type="number" min="0" max="30" step="6"></td>
+            <td><input type="number" min="0" max="30" step="6"></td>
+            <td><input type="number" min="0" max="30" step="6"></td>
+            <td><input type="number" min="0" max="30" step="6"></td>
         </tr>
         <tr>
             <td><strong>Summa</strong></td>
