--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <center>
         <br>
-        <img src="Yatzy.png" alt="Yatzy logo">
+        <img src="img/Yatzy.png" alt="Yatzy logo">
         <br>
         <form method="POST">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
