--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
         <a href="yatzy.html">New Game</a>
     </p>
     <h1>Charmander</h1>
-    <img src="https://static.planetminecraft.com/files/avatar/1679428_4.gif" alt="Cutebun">
+    <img src="img/Charmy.gif" alt="Cutebun">
     <p> </p>
     <h2>Gamer info:</h2>
     <p>animals rock!
