--- a/yatzy.html
+++ b/yatzy.html
@@ -2,6 +2,8 @@
 <html lang="sv">
 
 <head>
+    <link href="css/style.css"
+    rel="stylesheet">
     <title>Yatzy</title>
     <meta charset="UTF-8">
 </head>
@@ -21,126 +23,126 @@
             <th>GY</th>
         </tr>
         <tr>
-            <td>Ettor</td>
+            <td class="header">Ettor</td>
             <td><input type="number" min="0" max="5"></td>
             <td><input type="number" min="0" max="5"></td>
             <td><input type="number" min="0" max="5"></td>
             <td><input type="number" min="0" max="5"></td>
         </tr>
         <tr>
-            <td>Tvåor</td>
+            <td class="header">Tvåor</td>
             <td><input type="number" min="0" max="10" step="2"></td>
             <td><input type="number" min="0" max="10" step="2"></td>
             <td><input type="number" min="0" max="10" step="2"></td>
             <td><input type="number" min="0" max="10" step="2"></td>
         </tr>
         <tr>
-            <td>Treor</td>
+            <td class="header">Treor</td>
             <td><input type="number" min="0" max="15" step="3"></td>
             <td><input type="number" min="0" max="15" step="3"></td>
             <td><input type="number" min="0" max="15" step="3"></td>
             <td><input type="number" min="0" max="15" step="3"></td>
         </tr>
         <tr>
-            <td>Fyror</td>
+            <td class="header">Fyror</td>
             <td><input type="number" min="0" max="20" step="4"></td>
             <td><input type="number" min="0" max="20" step="4"></td>
             <td><input type="number" min="0" max="20" step="4"></td>
             <td><input type="number" min="0" max="20" step="4"></td>
         </tr>
         <tr>
-            <td>Femmor</td>
+            <td class="header">Femmor</td>
             <td><input type="number" min="0" max="25" step="5"></td>
             <td><input type="number" min="0" max="25" step="5"></td>
             <td><input type="number" min="0" max="25" step="5"></td>
             <td><input type="number" min="0" max="25" step="5"></td>
         </tr>
         <tr>
-            <td>Sexor</td>
+            <td class="header">Sexor</td>
             <td><input type="number" min="0" max="30" step="6"></td>
             <td><input type="number" min="0" max="30" step="6"></td>
             <td><input type="number" min="0" max="30" step="6"></td>
             <td><input type="number" min="0" max="30" step="6"></td>
         </tr>
-        <tr>
-            <td><strong>Summa</strong></td>
+        <tr class="special">
+            <td class="header">Summa</td>
+            <td><input type="number"></td>
+            <td><input type="number"></td>
+            <td><input type="number"></td>
+            <td><input type="number"></td>
+        </tr>
+        <tr class="special">
+            <td  class="header">Bonus</td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
         </tr>
         <tr>
-            <td><strong>Bonus</strong></td>
+            <td  class="header">Ett par</td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
         </tr>
         <tr>
-            <td>Ett par</td>
+            <td  class="header">Två par</td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
         </tr>
         <tr>
-            <td>Två par</td>
+            <td class="header">Tretal</td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
         </tr>
         <tr>
-            <td>Tretal</td>
+            <td class="header">Fyrtal</td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
         </tr>
         <tr>
-            <td>Fyrtal</td>
+            <td class="header">Liten stege</td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
         </tr>
         <tr>
-            <td>Liten stege</td>
+            <td class="header">Stor stege</td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
         </tr>
         <tr>
-            <td>Stor stege</td>
+            <td class="header">Kåk</td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
         </tr>
         <tr>
-            <td>Kåk</td>
+            <td class="header">Chans</td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
         </tr>
         <tr>
-            <td>Chans</td>
+            <td class="header">Yatzy</td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
         </tr>
-        <tr>
-            <td>Yatzy</td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
-            <td><input type="number"></td>
-        </tr>
-        <tr>
-            <td><strong>Totalt</strong></td>
+        <tr class="special">
+            <td class="header">Totalt</td>
             <td><input type="number"></td>
             <td><input type="number"></td>
             <td><input type="number"></td>
