Colour changing, layout fixes

--- a/yatzy.html
+++ b/yatzy.html
@@ -16,7 +16,7 @@
     </p>
     <table>
         <tr>
-            <th></th>
+            <th>Spelare</th>
             <th>TT</th>
             <th>BP</th>
             <th>VR</th>
