changes in css for results

--- a/results.html
+++ b/results.html
@@ -2,6 +2,7 @@
 <html lang="sv">
 
 <head>
+    <link href="css/style.css" rel="stylesheet">
     <meta charset="utf-8" />
     <title>Results</title>
 </head>
