--- a/results.html
+++ b/results.html
@@ -2,7 +2,7 @@
 <html lang="sv">
 
 <head>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style BP.css" rel="stylesheet">
     <meta charset="utf-8" />
     <title>Results</title>
 </head>
@@ -15,7 +15,7 @@
     <h1>Resultat från tidigare omgångar</h1>
 
     <h2>Omgång 1</h2>
-    <table style="width: 200px" border="1">
+    <table class="result">
         <tr>
             <th>Namn</th>
             <th>Poäng</th>
@@ -39,7 +39,7 @@
     </table>
 
     <h2>Omgång 2</h2>
-    <table style="width: 200px" border="1">
+    <table class="result">
         <tr>
             <th>Namn</th>
             <th>Poäng</th>
