--- a/yatzy.html
+++ b/yatzy.html
@@ -12,10 +12,13 @@
         
         <div class="topnav-left">
             <img src="img/dice.jpg" alt="Yatzy logga"> 
-            <a href="starterpage.html">Start</a>
-            <a class="active" href="#">Nytt spel</a>
-            <a href="results.html">Tidigare resultat</a>
-            <a href="profile.html">Min spelprofil</a>
+            <span class="navlinks">
+                <a href="starterpage.html">Start</a>
+                <a class="active" href="#">Nytt spel</a>
+                <a href="results.html">Tidigare resultat</a>
+                <a href="profile.html">Min spelprofil</a>
+            </span>
+           
         </div>
         <div class="topnav-right">
             <a href="index.html"><button>Logga ut</button></a>
@@ -156,6 +159,10 @@
             <td><input type="number"></td>
         </tr>
     </table>
+
+    <div class="dices">
+        <img src="img/dice.jpg" alt="dice">
+    </div>
 
 </body>
 
