--- a/results.html
+++ b/results.html
@@ -2,7 +2,7 @@
 <html lang="sv">
 
 <head>
-    <link href="css/style BP.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <meta charset="utf-8" />
     <title>Results</title>
 </head>
