--- a/profile.html
+++ b/profile.html
@@ -2,15 +2,27 @@
 <html lang="sv">
 
 <head>
+    <link href="css/style.css" rel="stylesheet">
     <title>Profile-Yatta</title>
     <meta charset="UTF-8">
 </head>
 
 <body>
-    <p>Gå till:
-        <a href="index.html">Log Out</a>
-        <a href="results.html">Scores</a>
-        <a href="yatzy.html">New Game</a>
+    <nav>
+        <div class="topnav-left">
+            <img src="img/dice.jpg" alt="Yatzy logga">
+            <span class="navlinks">
+                <a href="starterpage.html">Start</a>
+                <a href="yatzy.html">Nytt spel</a>
+                <a href="results.html">Tidigare resultat</a>
+                <a class="active" href="profile.html">Min spelprofil</a>
+            </span>
+
+        </div>
+        <div class="topnav-right">
+            <a href="index.html"><button>Logga ut</button></a>
+        </div>
+    </nav>
     </p>
     <h1>Charmander</h1>
     <img src="img/Charmy.gif" alt="Cutebun">
