--- a/results.html
+++ b/results.html
@@ -8,10 +8,22 @@
 </head>
 
 <body>
-    <p>Gå till:
-        <a href="profile.html">Profile</a>
-        <a href="yatzy.html">New Game</a>
-    </p>
+        <nav>
+        
+                <div class="topnav-left">
+                    <img src="img/dice.jpg" alt="Yatzy logga"> 
+                    <span class="navlinks">
+                        <a href="starterpage.html">Start</a>
+                        <a href="yatzy.html">Nytt spel</a>
+                        <a class="active"href="results.html">Tidigare resultat</a>
+                        <a href="profile.html">Min spelprofil</a>
+                    </span>
+                   
+                </div>
+                <div class="topnav-right">
+                    <a href="index.html"><button>Logga ut</button></a>
+                </div>
+            </nav>
     <h1>Resultat från tidigare omgångar</h1>
 
     <h2>Omgång 1</h2>
