--- a/yatzy.html
+++ b/yatzy.html
@@ -14,7 +14,7 @@
             <img src="img/dice.jpg" alt="Yatzy logga"> 
             <span class="navlinks">
                 <a href="starterpage.html">Start</a>
-                <a class="active" href="#">Nytt spel</a>
+                <a class="active" href="yatzy.html">Nytt spel</a>
                 <a href="results.html">Tidigare resultat</a>
                 <a href="profile.html">Min spelprofil</a>
             </span>
