Changed to nav to flexbox

--- a/yatzy.html
+++ b/yatzy.html
@@ -5,11 +5,11 @@
     <link href="css/style.css" rel="stylesheet">
     <title>Yatzy</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-    <nav>
-        
+    <nav>   
         <div class="topnav-left">
             <img src="img/dice.jpg" alt="Yatzy logga"> 
             <span class="navlinks">
